--- a/Coursework/Set Exercises/Comp2000 SECW/project.conf
+++ b/Coursework/Set Exercises/Comp2000 SECW/project.conf
@@ -22,7 +22,7 @@
       <prop name="AccessibleClasses" value="\jre\lib\rt.jar" scope="LOCAL"/>
       <prop name="AccessorsGeneration" value="Smart" scope="LOCAL"/>
       <prop name="CompilationPath" value="$(Project)/bin" scope="LOCAL"/>
-      <prop name="CustomizationFile" scope="LOCAL">res\custom\javaCustomizationFile.xml</prop>
+      <prop name="CustomizationFile" scope="LOCAL">D:\University Work\COMP2000\Coursework\COMP2000-SETeX\src</prop>
       <prop name="Encoding" value="UTF-8" scope="LOCAL"/>
       <prop name="GenDocPath" value="$(Project)/doc" scope="LOCAL"/>
       <prop name="GenerationMode" value="RoundTrip" scope="LOCAL"/>
@@ -36,6 +36,7 @@
     </properties>
   </module>
   <properties>
+    <prop name="info.contact" value="" scope="LOCAL"/>
     <prop name="info.description" value="Set Exercises" scope="LOCAL"/>
     <prop name="org.modelio.app.script.ui/org.modelio.script.property.DebugMode.default" value="false" scope="LOCAL"/>
     <prop name="org.modelio.model.propertyId/ShowHiddenMdaElements.default" value="false" scope="LOCAL"/>
