--- a/Coursework/Set Exercises/Comp2000se3/project.conf
+++ b/Coursework/Set Exercises/Comp2000se3/project.conf
@@ -37,7 +37,8 @@
   </module>
   <properties>
     <prop name="info.contact" value="" scope="LOCAL"/>
-    <prop name="info.description" scope="LOCAL">Will contain the UML diagram for the set ex 3\n</prop>
+    <prop name="info.description" scope="LOCAL">Will contain the UML diagram for the set ex 3
+\n</prop>
     <prop name="org.modelio.platform.project/ProjectPrefs.AttDefType" scope="LOCAL">'string' {00000004-0000-000d-0000-000000000000} Standard.DataType</prop>
     <prop name="org.modelio.platform.project/ProjectPrefs.AttDefType.default" scope="LOCAL">'string' {00000004-0000-000d-0000-000000000000} Standard.DataType</prop>
     <prop name="org.modelio.platform.project/ProjectPrefs.AttDefVis" value="Public" scope="LOCAL"/>
